# wlvm

./: CHANGELOG.md  Cargo.toml  README.md  example.vm  test.vm
.github/workflows/: build_&_test.yml
example/: adding.vm  errors.vm  forLoop.vm  helloAscii.vm
examples/: adding.vm  forLoop.vm  helloAscii.vm  test.vm  testEquality.vm
src/: main.rs  parser.rs  tests.rs
